# trash

./: .gitmodules  CMakeLists.txt  shippable.yml
src/: trash.cpp
